@@ -8,6 +8,7 @@ Version 5.2.1
 - Fixed use of FCACHE in inline assembly in LUT and COG functions
 - Fixed BASIC input when 127 (DEL) is read (Unix terminals use this for backspace)
 - Fixed a problem with parsing floating point numbers with 32 bit compilers
+- Ignored backtick statements in Spin2 DEBUG (and issue a warning)
 
 Version 5.2.0
 - Added GET as keyword to BASIC
